--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: "Roboto Slab";
+  src: url(./vendor/fonts-backend/robotoslab-regular.woff);
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url(./vendor/fonts-backend/roboto-medium.woff);
+  font-weight: 500;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +24,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
