--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -6,6 +6,7 @@
  .app__background {
   background-image: url(../../images/header.jpg);
   background-size: 100%;
+  background-repeat: space;
   background-position: center;
   background-attachment: fixed; /* !!! */
  }
