--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,5 @@
 .header {
-  padding-top: 30px;
-  border-bottom: 1px solid #D1D2D6;
+  border-bottom: 1px solid #d1d2d6;
 }
 
 .header__container {
@@ -24,6 +23,17 @@
   flex-direction: row;
 }
 
+.header__circle {
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 100px;
+  margin-left: 32px;
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  padding: 12px;
+}
+
 .header__link {
   font-family: Roboto;
   font-style: normal;
@@ -35,39 +45,20 @@
 }
 
 .header__link_active {
-  margin: 0;
   padding: 23px 0;
   border-bottom: 3px solid black;
 }
 
 .header__link_active_light-theme {
+  padding: 23px 0;
   border-bottom: 3px solid white;
-}
-
-.header__button {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 24px;
-  box-sizing: border-box;
-  border-radius: 100px;
-  background-color: transparent;
-  width: 176px;
-  height: 48px;
-  align-self: center;
-  margin-left: 32px;
-}
-
-.header__button_theme-dark {
-  border: 1px solid black;
-}
-
-.header__button_theme-light {
-  border: 1px solid white;
-  color: white;
 }
 
 .header_light-theme {
   color: white;
+}
+
+.header__link:last-of-type {
+  margin: 0;
+  
 }
