--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -1,7 +1,8 @@
 .search {
   display: flex;
   width: 608px;
-  margin: 80px auto;
+  margin: auto;
+  padding: 80px 0;
   flex-direction: column;
 }
 
@@ -40,7 +41,6 @@
   margin: 0;
   border: none;
   border-radius: 50px;
-  margin-bottom: 80px;
 }
 
 .search__button {
@@ -50,7 +50,7 @@
   border: none;
   border-radius: 50px;
   position: absolute;
-  bottom: 80px;
+  bottom: 0px;
   right: 0px;
   color: white;
   font-family: Roboto;
