--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,15 +1,26 @@
 .about {
-  margin: 80px 104px;
+  margin: 80px auto;
+  max-width: 1232px;
   display: flex;
   flex-direction: row;
 }
 
-.about__photo {
+.about__photo-box {
   width: 464px;
   height: 464px;
+  position: relative;
+  margin-right: 56px;
+}
+
+.about__photo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 50%;
   object-fit: contain;
-  margin-right: 56px;
 }
 
 .about__box {
@@ -22,7 +33,7 @@
   font-weight: normal;
   font-size: 40px;
   line-height: 46px;
-  color: #1A1B22;
+  color: #1a1b22;
 }
 
 .about__info {
@@ -31,6 +42,53 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 24px;
-  color: #1A1B22;
-  width: 600px;
+  color: #1a1b22;
+  max-width: 600px;
+}
+
+@media screen and (max-width: 1000px) {
+  .about {
+    max-width: 688px;
+    margin: 40px auto;
+  }
+  .about__photo-box {
+    width: 232px;
+    height: 232px;
+    margin-right: 32px;
+  }
+  .about__title {
+    font-size: 30px;
+    line-height: 40px;
+    margin: 0;
+  }
+  .about__info {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .about__box {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 606px) {
+  .about {
+    flex-direction: column;
+    align-items: center;
+    margin: 16px;
+    margin-bottom: 80px;
+  }
+  .about__photo-box {
+    width: 272px;
+    height: 272px;
+    margin: 0;
+    margin-top: 16px;
+  }
+  .about__title {
+    font-size: 30px;
+    line-height: 40px;
+    margin-top: 24px;
+  }
+  .about__info {
+    margin-top: 16px 0 0 0 ;
+  }
 }
