--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -46,3 +46,34 @@
 .footer__item:first-of-type {
   margin-right: 24px;
 }
+
+@media screen and (max-width: 1100px) {
+  .footer {
+    margin: 24px auto 18px auto;
+    max-width: 690px;
+  }
+  .footer__link {
+    margin: 0;
+  }
+  .footer__link:first-of-type {
+    margin-right: 15px;
+  }
+  .footer__menu {
+    margin-right: 26px;
+    padding: 0;
+  }
+  .footer__social {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footer {
+    max-width: 288px;
+    flex-direction: column-reverse;
+  }
+  .footer__link {
+    font-size: 18px;
+    line-height: 48px;
+  }
+}
