--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -7,7 +7,7 @@
 }
 
 .footer__censure {
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -29,11 +29,12 @@
 .footer__link {
   display: inline-block;
   color: #1a1b22;
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 24px;
+  text-decoration: none;
   margin-left: 25px;
 }
 
