--- a/src/components/results/Results.css
+++ b/src/components/results/Results.css
@@ -1,6 +1,5 @@
 .results {
   background-color: #f5f6f7;
-  padding: 80px 0;
   margin: auto;
 }
 
@@ -12,13 +11,14 @@
 }
 
 .results__title {
-  font-family: Roboto Slab;
+  font-family: Roboto Slab, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
   line-height: 46px;
   color: #1a1b22;
   margin: 0;
+  margin-top: 80px;
 }
 
 .results__add {
@@ -27,19 +27,25 @@
   background-color: white;
   border: none;
   border-radius: 50px;
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;
   align-self: center;
+  margin-bottom: 80px;
 }
 
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 16px;
-  margin: 64px 0;
+  grid-gap: 16px;
+  margin-bottom: 64px;
+}
+
+.results__add:hover {
+  background-color: rgb(250, 250, 250);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1410px) {
@@ -56,9 +62,14 @@
   }
 }
 
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 780px) {
   .cards {
     margin: 32px auto;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .cards {
     column-gap: 8px;
     max-width: 600px;
     grid-template-columns: 1fr 1fr;
@@ -69,6 +80,11 @@
   }
   .results__add {
     height: 56px;
+    margin-bottom: 40px;
+  }
+
+  .results__title {
+    margin-top: 40px;
   }
 }
 
@@ -79,8 +95,12 @@
   .results__title {
     font-size: 30px;
     line-height: 34px;
+    margin-top: 32px;
   }
   .results {
     padding: 32px 0;
+  }
+  .results__add {
+    margin-bottom: 32px;
   }
 }
