--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -7,8 +7,7 @@
 }
 
 .search__title {
-  /* width: 608px; */
-  font-family: Roboto Slab;
+  font-family: Roboto Slab, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 60px;
@@ -18,8 +17,7 @@
 }
 
 .search__about {
-  /* width: 545px; */
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -41,7 +39,7 @@
   margin: 0;
   border: none;
   border-radius: 50px;
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -59,11 +57,19 @@
   bottom: 0px;
   right: 0px;
   color: white;
-  font-family: Roboto;
+  font-family: Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;
+}
+
+.search__button:hover {
+  background-color: #347EFF;
+}
+
+.search__button:active {
+  background-color: #2A65CC;
 }
 
 @media screen and (max-width: 1410px) {
@@ -124,5 +130,4 @@
   .search__about {
     margin-bottom: 122px;
   }
-  
 }
