--- a/src/components/newsCard/NewsCard.css
+++ b/src/components/newsCard/NewsCard.css
@@ -15,6 +15,7 @@
   background-image: url(../../images/Group12.png);
   background-position: center;
   border-radius: 10px;
+  border: none;
 }
 .card__trash {
   background-image: url(../../images/trash.svg);
@@ -29,7 +30,9 @@
   width: 100%;
   margin: 0;
 }
-
+.card__link{
+  text-decoration: none;
+}
 .card__info {
   margin: 24px;
   margin-top: 0;
@@ -54,6 +57,10 @@
   line-height: 30px;
   color: #1a1b22;
   margin: 0;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow-y: hidden;
 }
 
 .card__text {
